--- a/resources/css/bem/counter-box.less
+++ b/resources/css/bem/counter-box.less
@@ -71,6 +71,7 @@
 
   &__content {
     line-height: 1;
+    min-width: 0; // prevents line from squishing in beatmapset discussions toolbar.
   }
 
   &__count {
