--- a/resources/css/bem/select-options.less
+++ b/resources/css/bem/select-options.less
@@ -14,6 +14,7 @@
 
   &--beatmap-discussions-user-filter {
     flex: 1;
+    min-width: 0;
   }
 
   &--download {
